--- a/src/definitions/modules/checkbox.less
+++ b/src/definitions/modules/checkbox.less
@@ -35,8 +35,8 @@
   height: @checkboxSize;
 
   font-size: 1rem;
+  line-height: @checkboxLineHeight;
   min-width: @checkboxSize;
-  line-height: @checkboxHeight;
   backface-visibility: hidden;
 
   outline: none;
@@ -61,7 +61,6 @@
 .ui.checkbox label {
   cursor: pointer;
   padding-left: @labelPadding;
-  line-height: @labelLineHeight;
   outline: none;
 }
 .ui.checkbox label {
